--- a/templates/profile.html
+++ b/templates/profile.html
@@ -55,7 +55,10 @@ $('#sendMessage').on('shown.bs.modal', function () {
 		  			<h3 class="under">Favorite Subjects</h3>
 		  		<!-- </div> -->
 		  		<div class="panel-body">
-		  			{{message['classes']}}
+				  {{message['subjects']}}<br>
+				  {% for m in message['subjects'] %}
+		  			{{m}}
+				  {%endfor%}
 		  		</div>
 		  	</div>
 		  	<div class="panel panel-default grey">
