--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -6,13 +6,7 @@
 
 {% block info %}
 
-<p> Time (Enter Day;Hours):
-  <input type="text" name="times">Day;Hours
-</p>
-<p> Address:
-<input type="checkbox" name="Day1_Address" value="School">School</input>
-<input type="checkbox" name="Day1_Address" value="Home">Home</input>
-</p>
+
 <p>Advanced courses you've taken:
 
 
@@ -20,21 +14,12 @@
 
 <br><br>
 
-<select multiple size="1" form="info" name="courses">
-    <option value="chemistry">AP Chemistry</option>
-    <option value="physics">AP Physics</option>
-    <option value="literature">AP Literature</option>
-</select>
 </p>
 
 <p>Your strongest subjects:
-  <select multiple size="1" form="info" name="subjects">
-    <option value="chemistry">Chemistry</option>
-    <option value="physics">Physics</option>
-    <option value="english">English</option>
-</select>
+  
+{% include "subjects.html" %}<br><br>
 </p>
-
 
 
 
@@ -42,17 +27,17 @@
 
 <input type="hidden" id="counter" name="counter" value="0"></input>
 
-
+<p>Availability:
 <div id="dropdowns">
 
 {% set n = 0 %}
 <div id="menu{{n}}">
-{% include "dropdown.html" %}
+{% include "dropdown.html" %}<br><br>
 </div>
 
 </div>
+</p>
 
-<br><br>
 <button type="button" id="add">Add Another Day</button><br><br>
 
 
