added address functionality in search

--- a/templates/register.html
+++ b/templates/register.html
@@ -22,14 +22,10 @@
 
 		<p>Grade: <input type="numn" name="grade"></p>
 
-		<p> Address: 
+		<p> Home Address: 
 		  <input type="text" name="address1"></p>
-
-		<p>This is:
-		  <select multiple size="1" form="info" name="address1_hs">
-		    <option value="Home">Home</option>
-		    <option value="School">School</option>
-		</select></p>
+		<p> School Address:
+		  <input type="text" name="address2"></p>
 
 		{% block info %}{% endblock %}
 
