--- a/templates/profile.html
+++ b/templates/profile.html
@@ -22,7 +22,7 @@ $('#sendMessage').on('shown.bs.modal', function () {
 				        <li><a href="/search"><h4>Search</h4></a></li>
 					{% endif %}
 				        <li><a href="/settings/profile"><h4>Account Settings</h4></a></li>
-					    <li><a href="/inbox"><h4>Messages</h4></a></li>
+					    <li><a href="/inbox"><h4>Messages ({{session['count_unread']}})</h4></a></li>
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
