--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -30,7 +30,7 @@
 		<div class="panel panel-default">
 		  <div class="panel-heading clearfix">
 		  	<form method="POST" id="removeAppt">
-			  	<button type="submit" class="btn btn-default pull-right" name="b" value="Complete">
+			  	<button type="submit" class="btn btn-default pull-right" name="s" value="Complete">
 				  <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 				</button>
 				<input type="hidden" name="index" value="{{loop.index0}}">
@@ -54,7 +54,7 @@
 			  <label for="message">Message</label>
 			  <input type="text" class="form-control" name="message" placeholder="Message"></p>
 			  <p><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
-			  </div>
+			</div>
 		</form>
 	</div>
 {% endblock %}
