--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -56,5 +56,17 @@
 			  <p><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
 			</div>
 		</form>
+
+	{% with messages = get_flashed_messages() %}
+  		{% if messages %}
+    		{% for message in messages %}
+		<div class="alert alert-warning" role="alert">
+      			{{ message }}
+		</div>
+    		{% endfor %}
+  		{% endif %}
+	{% endwith %}
+
 	</div>
+
 {% endblock %}
