added complete field to tutors

--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -25,7 +25,7 @@
 
 <br>
 
-<input type="hidden" id="counter" name="counter" value="0"></input>
+<!-- <input type="hidden" id="counter" name="counter" value="0"></input>
 
 <p>Availability:
 <div id="dropdowns">
@@ -38,7 +38,7 @@
 </div>
 </p>
 
-<button type="button" id="add">Add Another Day</button><br><br>
+<button type="button" id="add">Add Another Day</button><br><br> -->
 
 
 {% endblock %}
