--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,6 +26,12 @@
 		        </div>
 			</div>
 		</nav>
+		{% if session['type'] == "tutor" and session['complete'] == 0 %}
+			<div class="alert alert-danger" role="alert">
+			  <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+			  You have not yet entered the <a href="settings/times"> days and times you are available</a>. You must do this to be matched with tutees.
+			</div>
+		{%endif%}
 		{% for appt in appts %}
 		<div class="panel panel-default">
 		  <div class="panel-heading clearfix">
@@ -48,10 +54,10 @@
 		</div>
 		{% endfor %}
 		<form method="POST" id="message">
-			<div class="form-group">
+			<div class="form-group" style="color:black !important">
 			  <p><label for="recepient">Recepient</label>
-			  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient">
-			  <label for="message">Message</label>
+			  <input type="text" class="form-control" name="recipient" placeholder="Enter Recipient"></p>
+			  <p><label for="message">Message</label>
 			  <input type="text" class="form-control" name="message" placeholder="Message"></p>
 			  <p><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Send">
 			  </div>
