--- a/templates/register_update.html
+++ b/templates/register_update.html
@@ -114,7 +114,7 @@
 					<div class="page-inner">
 
 						<h2> Create a Tutee account </h2>
-						<form method="POST" id="info">
+						<!-- <form method="POST" id="info">
 							<p>First Name: <input type="text" name="first_name"></p>
 
 							<p>Last Name: <input type="text" name="last_name"></p>
@@ -144,7 +144,25 @@
 							<p>
 							<button type="submit" name="b" value="Submit">Submit</button>
 							</p>
+						</form> -->
+						<form method="POST" action="{{ url_for('register', user_type=user_type) }}" id="info">
+							<p>First Name: <input type="text" name="first_name"></p>
+							<p>Last Name: <input type="text" name="last_name"></p>
+							<p>Username: <input type="text" name="username"></p>
+							<p>Email: {{ form.email }}</p>
 
+							<p>Password: {{ form.password }}</p>
+
+							<p>School: <input type="text" name="school"></p>
+							<p>Grade: <input type="numn" name="grade"></p>
+							<p> Home Address: 
+							  <input type="text" name="address1"></p>
+							<p> School Address:
+							  <input type="text" name="address2"></p>
+
+							<p><button type="submit" name="b" value="Submit">Submit</button></p>
+
+							{{ form.csrf_token }}
 						</form>
 
 					</div><!-- /page-inner -->
