--- a/static/stylesheets/dropdown.css
+++ b/static/stylesheets/dropdown.css
@@ -20,6 +20,7 @@ padding: 4px 10px;
 width: 70px;
 height: 35px;
 background: #5970B2;
+/*background: rgba(52, 73, 94,1.0);*/
 color: #FFF;
 text-align: center;
 text-decoration: none
@@ -34,7 +35,8 @@ z-index: 10;
 	visibility: hidden;
 	margin: 0;
 	padding: 0;
-	background: #EAEBD8;
+	/*background: #EAEBD8*/;
+	background: #fff;
 	border: 1px solid #5970B2}
 
 .d2 {
@@ -50,7 +52,8 @@ margin: 0;
 padding: 5px 10px;
 text-align: left;
 text-decoration: none;
-background: #EAEBD8;
+/*background: #EAEBD8*/;
+background: #fff;
 color: #2875DE;
 font: 11px arial
 }
@@ -65,7 +68,8 @@ height:18px;
 white-space: nowrap;
 text-align: left;
 text-decoration: none;
-background: #EAEBD8;
+/*background: #EAEBD8*/;
+background: #fff;
 color: #2875DE;
 font: 11px arial
 }
@@ -82,7 +86,8 @@ visibility: hidden;
 margin-right: -33px;
 margin-top: 10px;
 padding: 0;
-background: #EAEBD8;
+/*background: #EAEBD8*/;
+background: #fff;
 border: 1px solid #5970B2;
 right:1px;
 top: 0px;
@@ -97,7 +102,8 @@ width: 30px;
 white-space: nowrap;
 text-align: left;
 text-decoration: none;
-background: #EAEBD8;
+/*background: #EAEBD8*/;
+background: #fff;
 color: #2875DE;
 font: 11px arial
 }
