--- a/templates/settings.html
+++ b/templates/settings.html
@@ -23,22 +23,11 @@ var times = {{ days|tojson }};
 				    </ul>
 		    		<ul class="nav navbar-nav navbar-right">
 		          		<li><p style="color:black !important"class="navbar-text">Signed in as {{ session["first_name"] }} {{ session["last_name"] }}</p></li>
-			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></li>
+			  			<li><form method="POST" id="message"><input type="submit" class="btn btn-default navbar-btn button" name="s" value="Log Out"></form></li>
 		        	</ul>
 		        </div>
 			</div>
 		</nav>
-		<!-- <div class="col-md-4" role="navigation">
-			<nav class="menu">
-			  <h3 class="menu-heading" data-pjax>Settings</h3>
-			    <a href="settings/update_profile" class="list-group-item">Profile</a>
-			    {% if session["type"]=="tutor" %}
-				    <a href="settings/classes" class="list-group-item">Classes</a>
-				    <a href="settings/subjects" class="list-group-item">Subjects</a>
-				    <a href="settings/times" class="list-group-item">Times</a>
-				{% endif %}
-			</nav>
-		</div> -->
 		{% block settings_type %}
 		{% endblock %}
 	</div>
