--- a/templates/register_tutor.html
+++ b/templates/register_tutor.html
@@ -1,7 +1,7 @@
 {% extends "register.html" %}
 
 {% block header %}
-<h1> Create a Tutor account </h1>
+<p><h3 class="settings-header">Create Tutor Account</h3></p>
 {% endblock %}
 
 {% block info %}
@@ -21,9 +21,6 @@
 {% include "subjects.html" %}<br><br>
 </p>
 
-
-
-<br>
 
 <!-- <input type="hidden" id="counter" name="counter" value="0"></input>
 
