--- a/templates/register.html
+++ b/templates/register.html
@@ -2,36 +2,52 @@
 
 {% block head %}
 <link rel="stylesheet" href="/static/stylesheets/dropdown.css">
+<link rel="stylesheet" type="text/css" href="../static/stylesheets/inside.css">
 {% endblock %}
 
 {% block body %}
+<div class="container">
+
+	<nav class="navbar navbar-tutee">
+			<div class="container-fluid">
+				<div id="navbar" class="collapse navbar-collapse">
+					<ul class="nav navbar-nav">
+		       		<h3 style="color:rgba(46, 204, 113,1.0)">Tutee</h3>
+		       	</ul>
+		        </div>
+			</div>
+		</nav>
+<div class="panel panel-default grey">
+	
 	{% block header %}{% endblock %}
 
-	<form method="POST" action="{{ url_for('register', user_type=user_type) }}" id="info">
-		<p>First Name: <input type="text" name="first_name"></p>
+	<form method="POST"  action="{{ url_for('register', user_type=user_type) }}" style="color:black !important" id="info">
+		<p>First Name: <input style="color:black !important" type="text" name="first_name"></p>
 
-		<p>Last Name: <input type="text" name="last_name"></p>
+		<p>Last Name: <input style="color:black !important" type="text" name="last_name"></p>
 
-		<p>Username: <input type="text" name="username"></p>
+		<p>Username: <input  type="text" name="username"></p>
 
 		<p>Email: {{ form.email }}</p>
 
-		<p>Password: {{ form.password }}</p>
+		<p >Password: {{ form.password }}</p>
 
-		<p>School: <input type="text" name="school"></p>
+		<p>School: <input style="color:black !important" type="text" name="school"></p>
 
-		<p>Grade: <input type="numn" name="grade"></p>
+		<p>Grade: <input style="color:black !important" type="numn" name="grade"></p>
 
 		<p> Home Address: 
-		  <input type="text" name="address1"></p>
+		  <input type="text" style="color:black !important" name="address1"></p>
 		<p> School Address:
-		  <input type="text" name="address2"></p>
+		  <input type="text" style="color:black !important" name="address2"></p>
 
 		{% block info %}{% endblock %}
 
-		<p><button type="submit" name="b" value="Submit">Submit</button></p>
+		<p><button type="submit" style="color:black !important"name="b" value="Submit">Submit</button></p>
 	{{ form.csrf_token }}	
 	</form>
+</div>
+</div>
 <script type="text/javascript" src="/static/js/dropdown.js"></script>
 <script type="text/javascript" src="/static/js/dropdown_edit.js"></script>
 <script type="text/javascript" src="/static/js/register_tutor.js"></script>
