--- a/templates/register_tutee.html
+++ b/templates/register_tutee.html
@@ -1,5 +1,5 @@
 {% extends "register.html" %}
 
 {% block header %}
-<h1> Create a Tutee account </h1>
+<p><h3 class="settings-header">Create Tutor Account</h3></p>
 {% endblock %}
