--- a/templates/register.html
+++ b/templates/register.html
@@ -17,6 +17,15 @@
 		        </div>
 			</div>
 		</nav>
+
+		{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			{% for message in messages %}
+			
+				<div class="alert alert-danger" role="alert">{{message}}</div>
+			{% endfor %}
+			{% endif %}
+		{% endwith %}
 <div class="panel panel-default grey">
 	
 	{% block header %}{% endblock %}
