--- a/templates/settings_classes.html
+++ b/templates/settings_classes.html
@@ -1,4 +1,10 @@
 {% extends "settings.html" %}
+{% block head2 %}
+
+<link rel="stylesheet" href="/static/stylesheets/dropdown.css">
+<link rel="stylesheet" type="text/css" href="../static/stylesheets/inside.css">
+
+{% endblock %}
 {% block settings_type %}
 
 {%endblock%}
