--- a/templates/profile.html
+++ b/templates/profile.html
@@ -82,7 +82,7 @@ $('#sendMessage').on('shown.bs.modal', function () {
 		  	{% endif %}
 		{% if session["type"] != message["type"] %}
 		<form method="POST" class="pull-right">
-			    		<button type="button" style="color:black" data-toggle="modal" data-target="#sendMessage">Send Message</button>
+			    		<button class="button" type="button" style="color:black" data-toggle="modal" data-target="#sendMessage">Send Message</button>
 			    </form>
 		<div class="modal fade" id="sendMessage" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
