--- a/templates/login.html
+++ b/templates/login.html
@@ -43,7 +43,7 @@
             <form method="POST">
               <p>Username: <input type="text" name="username"></p>
               <p>Password: <input type="password" name="password"></p>
-              <p><button class="button" type="submit" name="b" value="login_tutee">Submit</button></p>
+              <p><button class="button-opposite" type="submit" name="b" value="login_tutee">Submit</button></p>
             </form> 
 
 
