more subject options

--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -2,7 +2,21 @@
 <li class="list"><a class="m" child="m1" menu="b" style="width:135px">Subjects</a>
 <div id="menub-m1" class="menub d 1" style="width:135px">
 
- <input class="menub d2 1" type="checkbox" value="chemistry" name="subject"> <textbox class="menub d2 1 text2">Chemistry</textbox><br>
+ <input class="menub d2 1" type="checkbox" value="chemistry" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Chemistry</textbox><br>
+<input class="menub d2 1" type="checkbox" value="physics" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Physics</textbox><br>
+<input class="menub d2 1" type="checkbox" value="biology" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Biology</textbox><br>
+<input class="menub d2 1" type="checkbox" value="algebra" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Algebra</textbox><br>
+<input class="menub d2 1" type="checkbox" value="trig" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Trig</textbox><br>
+<input class="menub d2 1" type="checkbox" value="precalc" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Pre-Calculus</textbox><br>
+<input class="menub d2 1" type="checkbox" value="calc" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Calculus</textbox><br>
+<input class="menub d2 1" type="checkbox" value="english" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">English</textbox><br>
+<input class="menub d2 1" type="checkbox" value="hist-us" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">United States History</textbox><br>
+<input class="menub d2 1" type="checkbox" value="hist-w" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">World History</textbox><br>
+<input class="menub d2 1" type="checkbox" value="span" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Spanish</textbox><br>
+<input class="menub d2 1" type="checkbox" value="french" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">French</textbox><br>
+<input class="menub d2 1" type="checkbox" value="german" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">German</textbox><br>
+<input class="menub d2 1" type="checkbox" value="latin" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Latin</textbox><br>
+<input class="menub d2 1" type="checkbox" value="mando" name="subject"> <textbox class="menub d2 1 text2" style="width:105px">Mandarin</textbox><br>
 </div>
 </li>
 </ul>
