--- a/templates/classes.html
+++ b/templates/classes.html
@@ -5,11 +5,11 @@
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-science" child="sciences" style="width:135px" pos="0">Science</a>
 
-<div class="menua s 1 sciences" style="width:135px;margin-right:-138px">
+<div class="menua s 1 sciences" style="width:165px;margin-right:-166px">
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="chem" name="course"><textbox class="menua s2 1 text2 sciences">AP Chemistry</textbox><br>
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="bio" name="course"><textbox class="menua s2 1 text2 sciences">AP Biology</textbox><br>
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="envir" name="course"><textbox class="menua s2 1 text2 sciences">AP Environmental Science</textbox><br>
-<input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="physC-E" name="course"><textbox class="menua s2 1 text2 sciences">AP Physics C: Electricity and Magnetism</textbox><br>
+<input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="physC-E" name="course"><textbox class="menua s2 1 text2 sciences">AP Physics C: E & M</textbox><br>
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="physC-M" name="course"><textbox class="menua s2 1 text2 sciences">AP Physics C: Mechanics</textbox><br>
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="phys1" name="course"><textbox class="menua s2 1 text2 sciences">AP Physics 1</textbox><br>
 <input class="menua s2 1 sciences" parent="science" root="m1"  type="checkbox" value="phys2" name="course"><textbox class="menua s2 1 text2 sciences">AP Physics</textbox><br>
@@ -17,7 +17,7 @@
 
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-math" child="maths" style="width:135px" pos="1">Math & CS </a>
-<div class="menua s 1 maths" style="width:135px;margin-right:-138px">
+<div class="menua s 1 maths" style="width:165px;margin-right:-166px">
 <input class="menua s2 1 maths" parent="math" root="m1"  type="checkbox" value="calcAB" name="course"><textbox class="menua s2 1 text2 maths">AP Calculus AB</textbox><br>
 <input class="menua s2 1 maths" parent="math" root="m1"  type="checkbox" value="calcBC" name="course"><textbox class="menua s2 1 text2 maths">AP Calculus BC</textbox><br>
 <input class="menua s2 1 maths" parent="math" root="m1"  type="checkbox" value="cs" name="course"><textbox class="menua s2 1 text2 maths">AP Computer Science A</textbox><br>
@@ -26,8 +26,8 @@
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-his" child="hists" style="width:135px" pos="2">History & Social Science </a>
 
-<div class="menua s 1 hists" style="width:135px;margin-right:-138px">
-<input class="menua s2 1 hists" parent="his" root="m1"  type="checkbox" value="comp-gov" name="course"><textbox class="menua s2 1 text2 hists">AP Comparative Government</textbox><br>
+<div class="menua s 1 hists" style="width:165px;margin-right:-166px">
+<input class="menua s2 1 hists" parent="his" root="m1"  type="checkbox" value="comp-gov" name="course"><textbox class="menua s2 1 text2 hists">AP Comp Government</textbox><br>
 <input class="menua s2 1 hists" parent="his" root="m1"  type="checkbox" value="euro" name="course"><textbox class="menua s2 1 text2 hists">AP European History</textbox><br>
 <input class="menua s2 1 hists" parent="his" root="m1"  type="checkbox" value="geo" name="course"><textbox class="menua s2 1 text2 hists">AP Computer Science A</textbox><br>
 <input class="menua s2 1 hists" parent="his" root="m1"  type="checkbox" value="macro" name="course"><textbox class="menua s2 1 text2 hists">AP Human Geography</textbox><br>
@@ -42,7 +42,7 @@
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-eng" child="engs" style="width:135px" pos="3">English</a>
 
-<div class="menua s 1 engs" style="width:135px;margin-right:-138px">
+<div class="menua s 1 engs" style="width:165px;margin-right:-166px">
 <input class="menua s2 1 engs" parent="eng" root="m1"  type="checkbox" value="lang" name="course"><textbox class="menua s2 1 text2 engs">AP English Language</textbox><br>
 <input class="menua s2 1 engs" parent="eng" root="m1"  type="checkbox" value="lit" name="course"><textbox class="menua s2 1 text2 engs">AP English Literature</textbox><br>
 </div>
@@ -50,7 +50,7 @@
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-art" child="arts" style="width:135px" pos="4">Arts</a>
 
-<div class="menua s 1 arts" style="width:135px;margin-right:-138px">
+<div class="menua s 1 arts" style="width:165px;margin-right:-166px">
 <input class="menua s2 1 arts" parent="art" root="m1"  type="checkbox" value="art-his" name="course"><textbox class="menua s2 1 text2 arts">AP Art History</textbox><br>
 <input class="menua s2 1 arts" parent="art" root="m1"  type="checkbox" value="music" name="course"><textbox class="menua s2 1 text2 arts">AP Music Theory</textbox><br>
 <input class="menua s2 1 arts" parent="art" root="m1"  type="checkbox" value="studio-2D" name="course"><textbox class="menua s2 1 text2 arts">AP Studio Art: 2-D Design</textbox><br>
@@ -61,7 +61,7 @@
 
 <a class="menua d2 d2F 1 sub" parent="m1" id="menua-lang" child="langs" style="width:135px" pos="5">World Languages</a>
 
-<div class="menua s 1 langs" style="width:135px;margin-right:-138px">
+<div class="menua s 1 langs" style="width:165px;margin-right:-166px">
 <input class="menua s2 1 langs" parent="lang" root="m1"  type="checkbox" value="chinese" name="course"><textbox class="menua s2 1 text2 langs">AP Chinese Language</textbox><br>
 <input class="menua s2 1 langs" parent="lang" root="m1"  type="checkbox" value="french" name="course"><textbox class="menua s2 1 text2 langs">AP French Language</textbox><br>
 <input class="menua s2 1 langs" parent="lang" root="m1"  type="checkbox" value="german" name="course"><textbox class="menua s2 1 text2 langs">AP German Language</textbox><br>
